--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </div>                  
                 </li>
                 <li>
-                    <img src="/images/img5.svg" alt="Ольга Репина">
+                    <img src="./images/img5.svg" alt="Ольга Репина">
                     <div>
                         <h3>Ольга Репина</h3>
                         <p>Frontend Developer</p>
